--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb://localhost/Zafirus-BD
+MONGODB_URI=mongodb+srv://admin:admin123@cluster0.35rqcfh.mongodb.net/Zafirus-BD
 SECRET=product
