--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.10",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.6.3"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.6.3",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
